.trabis file: install FSL for testing purposes

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
     - source activate testenv
     - conda install --yes numpy scipy networkx dateutil
     - sudo apt-get install mricron
+    - sudo apt-get install fsl
     - git clone https://github.com/neurospin/caps-mmutils.git /tmp/caps-mmutils
     - export PYTHONPATH=$PYTHONPATH:/tmp/caps-mmutils
     - pip install ordereddict
