--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ install:
     - source activate testenv
     - conda install --yes numpy scipy networkx dateutil
     - sudo apt-get install mricron
-    - sudo apt-get update
-    - sudo apt-get install fsl
+    - sudo apt-get install fsl-complete
     - git clone https://github.com/neurospin/caps-mmutils.git /tmp/caps-mmutils
     - export PYTHONPATH=$PYTHONPATH:/tmp/caps-mmutils
     - pip install ordereddict
