--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
     - wget -O- http://neuro.debian.net/lists/trusty.de-md.full | sudo tee /etc/apt/sources.list.d/neurodebian.sources.list
     - sudo apt-key adv --recv-keys --keyserver hkp://pgp.mit.edu:80 0xA5D32F012649A5A9
     - sudo apt-get update
-    - sudo apt-get install fsl-complete
+    - sudo apt-get install fsl-5.0-complete
     - git clone https://github.com/neurospin/caps-mmutils.git /tmp/caps-mmutils
     - export PYTHONPATH=$PYTHONPATH:/tmp/caps-mmutils
     - pip install ordereddict
