--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ before_install:
     - ./miniconda.sh -b -p $HOME/miniconda
     - export PATH=/home/travis/miniconda/bin:$PATH
     - hash -r
-
+    - bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh)
+    - travis_retry sudo apt-get install -qq --no-install-recommends
+    fsl
+    - source /etc/fsl/fsl.sh
 install:
     - conda update --yes conda
     - conda create -n testenv --yes pip python=$TRAVIS_PYTHON_VERSION
