--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ before_install:
     - export PATH=/home/travis/miniconda/bin:$PATH
     - hash -r
     - bash <(wget -q -O- http://neuro.debian.net/_files/neurodebian-travis.sh)
-    - travis_retry sudo apt-get install -qq --no-install-recommends
-    fsl
+    - travis_retry sudo apt-get install -qq --no-install-recommends fsl
     - source /etc/fsl/fsl.sh
 install:
     - conda update --yes conda
