--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 
 python:
     - 2.7
+    - 3.4
 
 before_install:
     - sudo apt-get update
@@ -39,7 +40,7 @@ install:
 
 script:
     - python setup.py nosetests
-    - pep8 . --ignore="E121,E123,E126,E226,E24,E704,E402"
+    - pep8 . --ignore="E121,E123,E126,E226,E24,E704,E402" --exclude='./.eggs'
 
 after_success:
     - cat .coverage | wc
