--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ install:
     - export PYTHONPATH=$PYTHONPATH:/tmp/caps-mmutils
     - pip install ordereddict
     - pip install ez_setup
+    - pip install soma-workflow
     - pip install matplotlib
     - pip install nibabel
     - pip install nipype
